==> Moddable-OpenSource/moddable/modules/pins/spi/pico/modSPI.c <==
#include "xsmc.h"
#include "mc.xs.h"
#include "xsHost.h"
#include <string.h>
#include <stdlib.h>
#include <errno.h>
#include "modSPI.h"
#include "mc.defines.h"
#define IRAM_ATTR
	#define MODDEF_SPI_MISO_PIN	-1
	#define MODDEF_SPI_MOSI_PIN	19
	#define MODDEF_SPI_SCK_PIN	22
#define SPI_CHUNKSIZE	(480)
	#define MODDEF_SPI_BUFFERSIZE	SPI_CHUNKSIZE

void modSPIInit(modSPIConfiguration config)
{
	int ret;

	if (!config->spi_inst) {
		if (config->spi_port == 1)
			config->spi_inst = spi1;
		else
			config->spi_inst = spi0;
	}

	if (!gSPIInited++) {

		gPrevHz = config->hz;
		spi_init(config->spi_inst, config->hz);
//		spi_init(config->spi_inst, 64000000);
		configSPI(config);

		config->clock_pin = (254 == config->clock_pin) ? MODDEF_SPI_SCK_PIN : config->clock_pin;
		config->mosi_pin = (254 == config->mosi_pin) ? MODDEF_SPI_MOSI_PIN : config->mosi_pin;
		config->miso_pin = (254 == config->miso_pin) ? MODDEF_SPI_MISO_PIN : config->miso_pin;

		if (0xff != config->clock_pin)
			gpio_set_function(config->clock_pin, GPIO_FUNC_SPI);
		if (0xff != config->mosi_pin)
			gpio_set_function(config->mosi_pin, GPIO_FUNC_SPI);
		if (0xff != config->miso_pin)
			gpio_set_function(config->miso_pin, GPIO_FUNC_SPI);

		gSPITxBuffer = c_malloc(MODDEF_SPI_BUFFERSIZE);
		gSPIInited = true;
	}
	//@ check

	if (NULL == gConfig) {
		gConfig = config;
	}

	(config->doChipSelect)(0, config);
}

void modSPIUninit(modSPIConfiguration config)
{
	if (config == gConfig)
		modSPIActivateConfiguration(NULL);

	if (0 == --gSPIInited) {
		spi_deinit(config->spi_inst);
		if (gSPITxBuffer) {
			c_free(gSPITxBuffer);
			gSPITxBuffer = NULL;
		}
	}
}

uint16_t IRAM_ATTR modSpiLoadBufferRGB565LEtoRGB444(uint8_t *data, uint16_t bytes, uint16_t *bitsOut)
{
	uint16_t *from = (uint16_t *)data;
	uint8_t *to = (uint8_t *)(gSPITxBuffer);
	uint16_t remain;

	if (bytes > MODDEF_SPI_BUFFERSIZE)
		bytes = MODDEF_SPI_BUFFERSIZE;

	*bitsOut = (bytes >> 1) * 12;

	remain = bytes >> 2;
	while (remain--) {
		uint8_t r, g, b;
		uint16_t rgb565 = *from++;
		r = rgb565 >> 12, g = (rgb565 >> 7) & 0x0F, b = (rgb565 >> 1) & 0x0F;
		*to++ = (r << 4) | g;

		rgb565 = *from++;
		r = rgb565 >> 12;
		*to++ = (b << 4) | r;
		g = (rgb565 >> 7) & 0x0F, b = (rgb565 >> 1) & 0x0F;
		*to++ = (g << 4) | b;
	}

	if (bytes & 2) {
		uint8_t r, g, b;
		uint16_t rgb565 = *from;
		r = rgb565 >> 12, g = (rgb565 >> 7) & 0x0F, b = (rgb565 >> 1) & 0x0F;
		*to++ = (r << 4) | g;
		*to = b << 4;
	}

	return bytes;		// input bytes consumed
}

uint16_t IRAM_ATTR modSpiLoadBufferRGB332To16BE(uint8_t *data, uint16_t bytes, uint16_t *bitsOut)
{
	uint8_t *from = (uint8_t *)data;
	uint32_t *to = (uint32_t *)(gSPITxBuffer);
	uint16_t remain;

	if (bytes > (MODDEF_SPI_BUFFERSIZE >> 1))
		bytes = MODDEF_SPI_BUFFERSIZE >> 1;

	*bitsOut = bytes << 4;		// output bits are double input bits

	remain = bytes;
	while (remain >= 2) {
		uint8_t rgb332, r, g, b;
		uint16_t pixela, pixelb;

		rgb332 = *from++;
		r = rgb332 >> 5, g = (rgb332 >> 2) & 0x07, b = rgb332 & 0x03;
		r = (r << 2) | (r >> 2), g |= g << 3, b = (b << 3) | (b << 1) | (b >> 1);
		pixela = (r << 11) | (g << 5) | b;
		pixela = (pixela >> 8) | (pixela << 8);

		rgb332 = *from++;
		r = rgb332 >> 5, g = (rgb332 >> 2) & 0x07, b = rgb332 & 0x03;
		r = (r << 2) | (r >> 2), g |= g << 3, b = (b << 3) | (b << 1) | (b >> 1);
		pixelb = (r << 11) | (g << 5) | b;
		pixelb = (pixelb >> 8) | (pixelb << 8);

		*to++ = (pixelb << 16) | pixela;
		remain -= 2;
	}

	if (remain) {
		uint16_t pixela;
		uint8_t rgb332 = *from++, r, g, b;
		r = rgb332 >> 5, g = (rgb332 >> 2) & 0x07, b = rgb332 & 0x03;
		r = (r << 2) | (r >> 2), g |= g << 3, b = (b << 3) | (b << 1) | (b >> 1);
		pixela = (r << 11) | (g << 5) | b;
		pixela = (pixela >> 8) | (pixela << 8);
		*to++ = (0 << 16) | pixela;
	}

	return bytes;		// input bytes consumed
}

uint16_t IRAM_ATTR modSpiLoadBufferGray256To16BE(uint8_t *data, uint16_t bytes, uint16_t *bitsOut)
{
	uint8_t *from = (uint8_t *)data;
	uint32_t *to = (uint32_t *)(gSPITxBuffer);
	uint16_t remain;

	if (bytes > (MODDEF_SPI_BUFFERSIZE >> 1))
		bytes = MODDEF_SPI_BUFFERSIZE >> 1;

	*bitsOut = bytes << 4;		// output bits are double input bits

	remain = bytes;
	while (remain >= 2) {
		uint8_t gray;
		uint16_t pixela, pixelb;

		gray = *from++;
		pixela = ((gray >> 3) << 11) | ((gray >> 2) << 5) | (gray >> 3);
		pixela = (pixela >> 8) | (pixela << 8);

		gray = *from++;
		pixelb = ((gray >> 3) << 11) | ((gray >> 2) << 5) | (gray >> 3);
		pixelb = (pixelb >> 8) | (pixelb << 8);

		*to++ = (pixelb << 16) | pixela;
		remain -= 2;
	}

	if (remain) {
		uint8_t gray = *from++;
		uint16_t pixela = ((gray >> 3) << 11) | ((gray >> 2) << 5) | (gray >> 3);
		pixela = (pixela >> 8) | (pixela << 8);
		*to++ = (0 << 16) | pixela;
	}

	return bytes;		// input bytes consumed
}

uint16_t IRAM_ATTR modSpiLoadBufferGray16To16BE(uint8_t *data, uint16_t bytes, uint16_t *bitsOut)
{
	uint8_t *from = (uint8_t *)data;
	uint32_t *to = (uint32_t *)(gSPITxBuffer);
	uint16_t i;

	if (bytes > (MODDEF_SPI_BUFFERSIZE >> 2))
		bytes = MODDEF_SPI_BUFFERSIZE >> 2;
	*bitsOut = bytes << 5;		// output bits are quadruple input bits

	for (i = 0; i < bytes; i++) {
		uint8_t gray;
		uint8_t twoPixels = *from++;
		uint16_t pixela, pixelb;

		gray = (twoPixels >> 2) & 0x3C;
		gray |= gray >> 4;				// 6 bits of gray
		pixela = gray >> 1;				// 5 bita of gray
		pixela |= (pixela << 11) | (gray << 5);
		pixela = (pixela >> 8) | (pixela << 8);

		gray = (twoPixels << 2) & 0x3C;
		gray |= gray >> 4;
		pixelb = gray >> 1;
		pixelb |= (pixelb << 11) | (gray << 5);
		pixelb = (pixelb >> 8) | (pixelb << 8);

		*to++ = (pixelb << 16) | pixela;
	}

	return bytes;		// input bytes consumed
}

void modSPITxRx(modSPIConfiguration config, uint8_t *data, uint16_t count)
{
	int ret;

	modSPIActivateConfiguration(config);

	if (count > 255) {		// need to loop
		modLog("TxRx over 255 bytes unimplemented");
		return;
	}

	ret = spi_write_read_blocking(config->spi_inst, data, (uint8_t*)gSPITxBuffer, count);

	c_memcpy(data, gSPITxBuffer, count);
}

static void modSPITxCommon(modSPIConfiguration config, uint8_t *data, uint16_t count, modSPIBufferLoader loader)
{
	uint16_t bitsOut;
	uint32_t loaded;
	int ret;

	modSPIActivateConfiguration(config);

	while (count > 0) {
		loaded = (loader)(data, (count <= SPI_CHUNKSIZE) ? count : SPI_CHUNKSIZE, &bitsOut);
		count -= loaded;
		data += loaded;
		ret = spi_write_blocking(config->spi_inst, (uint8_t*)gSPITxBuffer, loaded);
		// check ret
	}

//	always sync
//	if (config->sync)
//		modSPIFlush();
}
